# tedit

./: .gitignore  CMakeLists.txt  compile_commands.json  debug.sh
include/: tedit.h
src/: CMakeLists.txt  main.c  tedit.c
